<resources>
    <string name="app_name">SmartChat</string>
    <string name="get_started_btn">Get Started</string>
    <string name="next">next</string>
    <string name="verify">verify</string>
    <string name="welcome">Welcome to SmartChat</string>
    <string name="name">enter the name </string>
    <string name="lastname">enter the last name </string>
    <string name="submit">submit</string>

    <string name="enternumber">enter the phone number</string>
    <string name="get_started">Build your communication network</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message_to_send">Type a message to send</string>
    <string name="msg_subscribed">subscribe</string>
    <string name="msg_subscribe_failed">unsubcribe</string>
    <string name="hello">hello</string>
    <string name="todo">todo</string>
    <string name="signout">signout</string>
</resources>
