<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity"
   >
   <com.google.android.material.button.MaterialButton
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:cornerRadius="25dp"
       android:layout_margin="16dp"
       android:text="@string/get_started_btn"
       android:textSize="20sp"
       android:paddingTop="16dp"
       android:id="@+id/getstarted"
       android:paddingBottom="16dp"
       />
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/getstarted"
        android:text="@string/get_started"
        android:textSize="29sp"
        android:id="@+id/build"
        android:layout_marginStart="16dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/build"
        android:layout_marginStart="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>