<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserinformationActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/name"
        android:textSize="28sp"

        android:layout_margin="20dp"
        android:id="@+id/firstname"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:layout_marginStart="20dp"
        android:hint="@string/lastname"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/firstname"

        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="25dp"
        android:layout_margin="16dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/lastname"

        android:paddingTop="16dp"
        android:id="@+id/submit"
        android:paddingBottom="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>